# pydes

./: .coverage  .gitignore  .readthedocs.yml  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements-test.txt
.github/workflows/: ci.yml  docs.yml  gh-pages.yml  python-publish.yml
docs/: examples.md  index.md  overview.md  quick-start.md  requirements-docs.txt
docs/code/: 01_process_example.py  02_event_example.py  03_state_example.py  04_queue_example.py  05_resource_example.py  06_container_example.py  07_store_example.py  08_datetime_example.py
docs/examples/: 01-process-example.md  02-event-example.md  03-state-example.md  04-queue-example.md  05-resource-example.md  06-container-example.md  07-store-example.md  08-datetime-example.md  index.md  timer-example.md
docs/scripts/: gen_examples_output.py  gen_ref_pages.py
examples/: 01_timer_example.py  02_event_example.py  02_queue_example.py  03_process_example.py  04_queue_example.py  04_state_example.py  05_queue_example_2.py  05_resource_example.py  06_container_example.py  06_event_example.py  07_resource_example.py  07_store_example.py  08_container_example.py  08_datetime_example.py  09_store_example.py
examples/events/: 01_beep_example.py  01_timer_example.py  02_timer_example.py  03_queue_example.py  04_interactions_example.py
examples/process/: 01_process_example.py  01_timer_example.py  02_queue_example.py  03_process_example.py  04_state_example.py  05_queue_example_2.py  06_event_example.py  07_resource_example.py  08_container_example.py  09_store_example.py  10_datetime_example.py
notebooks/: process-example.ipynb
src/pydes/: __init__.py  components.py  core.py  monitor.py
src/pydes/events/: __init__.py  core.py
src/pydes/process/: __init__.py  components.py  core.py  monitor.py
tests/: requirements-test.txt  test_all.py  test_components.py  test_monitor.py  test_simulator.py
