[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "py-des-lib"
description = "Event discrete, process based simulation for Python."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Vito Stamatti", email = "vitostamatti@gmail.com" }]
dependencies = ["greenlet"]
requires-python = ">= 3.10"
version = "0.1.0"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
]


# [tool.setuptools.dynamic]
# version = { attr = "pydes.__version__" }

[project.urls]
Homepage = "https://pydes.readthedocs.io/"
Documentation = "https://pydes.readthedocs.io/"
"Source code" = "https://github.com/vitostamatti/pydes"

[tool.setuptools]
license-files = ["LICENSE.txt"]

# [tool.setuptools_scm]

# [tool.mypy]
# pretty = true
# show_error_codes = true
# files = ["src/pydes"]

# [tool.pytest.ini_options]
# addopts = '''--doctest-glob="*.rst" -m "not benchmark"'''

# [tool.coverage.run]
# branch = true
# include = ["src/pydes/*", "tests/*"]

# [tool.ruff]

# [tool.ruff.lint]
# # See https://docs.astral.sh/ruff/rules/
# select = [
#     "F",    # Pyflakes
#     "E",    # Pycodestyle
#     "W",    # Pycodestyle
#     "I",    # isort
#     "N",    # pep8-naming
#     "UP",   # pyupgrade
#     "YTT",  # flake8-2020
#     "B",    # flake8-bugbear
#     "C4",   # flake8-comprehensions
#     "FA",   # flake8-future-annotations
#     "ISC",  # flake8-implicit-str-concat
#     "ICN",  # flake8-import-conventions
#     "PIE",  # flake8-pie
#     "INP",  # flake8-no-pep40
#     "T20",  # flake8-print
#     "PT",   # flake8-pytest-style
#     "PYI",  # flake8-pyi
#     "RSE",  # flake8-raise
#     "RET",  # flake8-return
#     "SLOT", # flake8-slots
#     "SIM",  # flake8-simplify
#     "TID",  # flake8-tidy-imports
#     "TCH",  # flake8-type-checking
#     "PL",   # Pylint
#     "TRY",  # tryceratops
#     "FLY",  # flynt
#     "PERF", # Perflint
#     "RUF",  # ruff-specific
# ]
# ignore = [
#     "ISC001", # Implicitly concatenated string literals on one line
#     "N818",   # Require "Error" suffix on exception type names
#     "UP006",  # Use 'type' instead of 'Type' for annotations
#     "UP007",  # Use 'X | Y' instead of 'Optional' in annotations
#     "PYI034", # Confused by Put.__enter__ and Get.__enter__
#     "PYI041", # Use `float` instead of `int | float`
#     "RET505", # Unnecessary `else` after `return` statement
#     "RET506", # Unnecessary `else` after `raise` statement
#     "SIM105", # Use `contextlib.suppress()` instead of try-except-pass
#     "TRY003", # Avoid specifying long messages outside the exception class
# ]

# [tool.ruff.format]
# quote-style = "single"

# [tool.ruff.isort]
# known-first-party = ["des"]

# [tool.ruff.lint.extend-per-file-ignores]
# "docs/*" = ["INP001"]
# "docs/examples/code/*" = ["T20"]
# "tests/*" = ["PLR2004", "PLR0913", "PERF203"]
