[tool.poetry]
name = "pydes"
version = "0.1.2"
description = "Event discrete, process based simulation for Python."
authors = ["vitostamatti <vitostamatti@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.urls]
Homepage = "https://pydes.readthedocs.io/"
Documentation = "https://pydes.readthedocs.io/"
Repository = "https://github.com/tiangolo/fastapi"
"Source code" = "https://github.com/vitostamatti/pydes"

[tool.setuptools]
license-files = ["LICENSE.txt"]

[tool.poetry.dependencies]
python = "^3.10"
greenlet = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
